rewritten nodeJS client, added a prompt to ask user about server infos

--- a/client/nodejs/package.json
+++ b/client/nodejs/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ludovicm67/poc-chat.git"
+  },
   "author": "ludovicm67",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "prompts": "^0.1.4"
+  }
 }
