started to add protobuf for the NodeJS client

--- a/client/nodejs/package.json
+++ b/client/nodejs/package.json
@@ -13,6 +13,7 @@
   "author": "ludovicm67",
   "license": "MIT",
   "dependencies": {
+    "google-protobuf": "^3.5.0",
     "prompts": "^0.1.4"
   }
 }
